# ezonnx-copy

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
examples/: face_recognition.ipynb  feature_extraction.ipynb  image_classification.ipynb  image_matching.ipynb  image_processing.ipynb  object_detection.ipynb  ocr.ipynb  segmentation.ipynb
ezonnx/: __init__.py
ezonnx/core/: downloader.py  inferencer.py
ezonnx/data_classes/: classification.py  feature_extraction.py  image_matching.py  image_processing.py  keypoint_detection.py  object_detection.py  ocr.py  optical_flow.py  result.py  segmentation.py  zeroshot_classification.py
ezonnx/models/alikedlightglue/: alikedlightglue.py
ezonnx/models/depthanythingv2/: depthanythingv2.py
ezonnx/models/dfine/: dfine_hf.py
ezonnx/models/dinov2/: dinov2.py
ezonnx/models/dinov3/: dinov3.py
ezonnx/models/dwpose/: dwpose.py
ezonnx/models/edgetam/: edgetam.py
ezonnx/models/imageclassifier/: imageclassifier.py
ezonnx/models/lama/: lama.py
ezonnx/models/lightglue/: lightglue.py
ezonnx/models/motionbert/: motionbert.py
ezonnx/models/neuflowv2/: neuflowv2.py
ezonnx/models/ormbg/: ormbg.py
ezonnx/models/ppocr/: ppocr.py
ezonnx/models/ppocr/pponnxcr/: __init__.py  predict_system.py  utility.py
ezonnx/models/ppocr/pponnxcr/cls/: predict_cls.py
ezonnx/models/ppocr/pponnxcr/det/: predict_det.py
ezonnx/models/ppocr/pponnxcr/rec/: predict_rec.py
ezonnx/models/realesrgan/: realesrgan.py
ezonnx/models/rfdetr/: rfdetr.py  rfdetr_seg.py
ezonnx/models/rmbg/: rmbg.py
ezonnx/models/rtmdet/: rtmdet.py
ezonnx/models/rtmo/: rtmo.py
ezonnx/models/rtmpose/: rtmpose.py
ezonnx/models/rtmw/: rtmw.py
ezonnx/models/rtmw3d/: rtmw3d.py
ezonnx/models/sam2/: sam2.py
ezonnx/models/siglip2/: siglip2.py
ezonnx/models/vitpose/: vitpose.py
ezonnx/models/yolo/: det.py  obb.py  seg.py
ezonnx/models/yunet/: yunet.py
ezonnx/ops/: pca.py  postprocess.py  preprocess.py  visualize.py
ezonnx/ops/face_detection/: postprocess_face.py
tests/: rtmw3d.ipynb  test_object_detection.py
